src/objects/Projet__c.object
<CustomObject>
    <fields>
        <fullName>Charte_du_projet__c</fullName>
        <label>Charte du projet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_fin__c</fullName>
        <label>Date fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duree__c</fullName>
        <formula>TODAY() -  DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duree</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facteurs_de_succ_s__c</fullName>
        <label>Facteurs de succès</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Livrables__c</fullName>
        <label>Livrables</label>
        <picklist>
            <picklistValues>
                <fullName>rapport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation corporative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation de services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Objectifs_du_projet__c</fullName>
        <label>Objectifs du projet</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Responsable_du_projet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable du projet</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE(  CASE(Status_du_projet__c,  &quot;vert&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;orange&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;rouge&quot;, &quot;/img/samples/light_red.gif&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_du_projet__c</fullName>
        <label>Status du projet</label>
        <picklist>
            <picklistValues>
                <fullName>Vert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rouge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_de_projet__c</fullName>
        <label>Type de projet</label>
        <picklist>
            <picklistValues>
                <fullName>stratégique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tactique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nouveau service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pourcentage_compl_t__c</fullName>
        <label>pourcentage complété</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tape__c</fullName>
        <label>Étapes</label>
        <picklist>
            <picklistValues>
                <fullName>définition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>conception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>déploiement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>complété</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Projet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de Projet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>